Added Code Into main.css File

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input
             type ="text"
             id="new-task-input"
-            placeholder="Enter data here"/>
+            placeholder="What do you have planned?"/>
             <input
             type="button"
             id="button-submit"
@@ -43,6 +43,6 @@
             </div>
         </section>
     </main>
-
+   <script src="main.js"></script>
 </body>
 </html>
