Added code into main.js And Completed

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <body>
     <header>
         <h1>Task List</h1>
+
         <form id="task-form">
+
             <input
             type ="text"
             id="new-task-input"
             placeholder="What do you have planned?"/>
+
             <input
-            type="button"
-            id="button-submit"
+            type="submit"
+            id="submit"
             value="Add Task"/>
         </form>
     </header>
@@ -25,7 +28,7 @@
         <section class="task-list">
             <h2>Tasks</h2>
             <div id="tasks">
-            <div class="task">
+            <!-- <div class="task">
                 <div class="content">
                     <input 
                     type="text"
@@ -39,7 +42,7 @@
                   
 
                 </div>
-            </div>
+            </div> -->
             </div>
         </section>
     </main>
